(feat): set width to minds-card-user to avoid jumping preload (#603)

--- a/app/src/modules/legacy/components/cards/cards.scss
+++ b/app/src/modules/legacy/components/cards/cards.scss
@@ -11,6 +11,8 @@ minds-card-user{
   }
   .avatar img{
     border-radius:50%;
+    width: 100px;
+    height: 100px;
   }
 }
 
